Fix overlap due to fixed height

--- a/airbitz/airbitz/static/2016-theme/css/style.css
+++ b/airbitz/airbitz/static/2016-theme/css/style.css
@@ -1166,7 +1166,7 @@ a.box:active {
 
 @media (max-width: 467px) {
   .github {
-    height: 230px !important;
+    /*height: 230px !important;*/
   }
 }
 @media (max-width: 486px) {
